焼肉に変えました。

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="about-wrapper-three about-active-three">
 
                 <div class="about-wrapper-four about-active-four">
-                    <h3 class="about"></h3>
+                    <h3 class="about">焼肉</h3>
                 </div>
 
             </div>
